--- a/BF2GameExt.vcxproj.filters
+++ b/BF2GameExt.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\BF2MemExt.cpp" />
+    <ClCompile Include="src\BF2GameExt.cpp" />
     <ClCompile Include="src\exe_patcher.cpp" />
     <ClCompile Include="src\file_helpers.cpp" />
     <ClCompile Include="src\gui.cpp" />
@@ -20,9 +20,9 @@
     <Xml Include="manifest.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="BF2MemExt.rc" />
+    <ResourceCompile Include="BF2GameExt.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="BF2MemExt.ico" />
+    <Image Include="BF2GameExt.ico" />
   </ItemGroup>
 </Project>
