--- a/PatcherDLL/PatcherDLL.vcxproj.filters
+++ b/PatcherDLL/PatcherDLL.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="src\cfile.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\dllmain.cpp">
@@ -50,5 +53,10 @@
     <ClCompile Include="src\cfile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
